# quantum-information-seminar

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  quantum-information-seminar.code-workspace  ruff.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.development  docker-compose.development.yaml
src/duetsch_algorithm_simulation/: __main__.py
src/duetsch_jozsa_algorithm_simulation/: __main__.py
src/grover_algorithm_simulation/: __main__.py
