[project]
name = "quantum-information-seminar"
version = "0.1.0"
description = "Exercises for the Quantum Information Seminar."
authors = [
  { name = "shio", email = "85730998+dino3616@users.noreply.github.com" },
]
dependencies = [
  "matplotlib==3.9.2",
  "pylatexenc==2.10",
  "qiskit==1.2.4",
  "qiskit-aer==0.15.1",
]
readme = "README.md"
requires-python = "~=3.12"

[tool.rye]
managed = true
dev-dependencies = ["lefthook==0.1.2", "mypy>=1.11.1", "ruff>=0.6.4"]

[tool.rye.scripts]
check = { chain = ["lint", "lint:type", "fmt"] }
"lint" = "ruff check ./ --diff"
"lint:type" = "mypy ./ --explicit-package-bases"
"fmt" = "ruff fmt ./"
